// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchX.dom with default props renders snapshot 1`] = `
<span
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "border": "1px solid rgba(223, 223, 223, 1)",
      "borderRadius": 15,
      "boxShadow": "inset 0 0 0 0px rgba(223, 223, 223, 1)",
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 30,
      "opacity": 1,
      "position": "relative",
      "transition": "0.2s",
      "userSelect": "none",
      "width": 50,
    }
  }
>
  <span
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderRadius": "100%",
        "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.4)",
        "cursor": "grab",
        "display": "inline-block",
        "height": 28,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "0.2s",
        "width": 28,
      }
    }
  />
  <input
    checked={false}
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
</span>
`;

exports[`SwitchX.dom with isDisabled set to false renders snapshot 1`] = `
<span
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "border": "1px solid rgba(223, 223, 223, 1)",
      "borderRadius": 15,
      "boxShadow": "inset 0 0 0 0px rgba(223, 223, 223, 1)",
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 30,
      "opacity": 1,
      "position": "relative",
      "transition": "0.2s",
      "userSelect": "none",
      "width": 50,
    }
  }
>
  <span
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderRadius": "100%",
        "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.4)",
        "cursor": "grab",
        "display": "inline-block",
        "height": 28,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "0.2s",
        "width": 28,
      }
    }
  />
  <input
    checked={false}
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
</span>
`;

exports[`SwitchX.dom with isDisabled set to true renders snapshot 1`] = `
<span
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "border": "1px solid rgba(223, 223, 223, 1)",
      "borderRadius": 15,
      "boxShadow": "inset 0 0 0 0px rgba(223, 223, 223, 1)",
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 30,
      "opacity": 1,
      "position": "relative",
      "transition": "0.2s",
      "userSelect": "none",
      "width": 50,
    }
  }
>
  <span
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderRadius": "100%",
        "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.4)",
        "cursor": "grab",
        "display": "inline-block",
        "height": 28,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "0.2s",
        "width": 28,
      }
    }
  />
  <input
    checked={false}
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
</span>
`;

exports[`SwitchX.dom with isOn set to false renders snapshot 1`] = `
<span
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "border": "1px solid rgba(223, 223, 223, 1)",
      "borderRadius": 15,
      "boxShadow": "inset 0 0 0 0px rgba(223, 223, 223, 1)",
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 30,
      "opacity": 1,
      "position": "relative",
      "transition": "0.2s",
      "userSelect": "none",
      "width": 50,
    }
  }
>
  <span
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderRadius": "100%",
        "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.4)",
        "cursor": "grab",
        "display": "inline-block",
        "height": 28,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "0.2s",
        "width": 28,
      }
    }
  />
  <input
    checked={false}
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
</span>
`;

exports[`SwitchX.dom with isOn set to true renders snapshot 1`] = `
<span
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 1)",
      "border": "1px solid rgba(0, 0, 0, 1)",
      "borderRadius": 15,
      "boxShadow": "inset 0 0 0 20px rgba(0, 0, 0, 1)",
      "boxSizing": "border-box",
      "display": "inline-block",
      "height": 30,
      "opacity": 1,
      "position": "relative",
      "transition": "0.2s",
      "userSelect": "none",
      "width": 50,
    }
  }
>
  <span
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderRadius": "100%",
        "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.4)",
        "cursor": "grab",
        "display": "inline-block",
        "height": 28,
        "left": 20,
        "position": "absolute",
        "top": 0,
        "transition": "0.2s",
        "width": 28,
      }
    }
  />
  <input
    checked={true}
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
</span>
`;
